// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match baseline snapshot as A button 1`] = `
<Styled(A)
  bgColor="#4C81D6"
  bgColorHover="#FFFFFF"
  color="#FFFFFF"
  colorHover="#2B64C0"
  href="http://google.com"
  plainLink={true}
  to=""
>
  <h1
    key=".0"
  >
    Test
  </h1>
</Styled(A)>
`;

exports[`<Button /> should match baseline snapshot as Button button 1`] = `
<styled.button
  bgColor="#4C81D6"
  bgColorHover="#FFFFFF"
  color="#FFFFFF"
  colorHover="#2B64C0"
  onClick={[MockFunction]}
  plainButton={false}
  type="button"
>
  <h1
    key=".0"
  >
    Test
  </h1>
</styled.button>
`;

exports[`<Button /> should match baseline snapshot as Link button 1`] = `
<Styled(A)
  bgColor="#4C81D6"
  bgColorHover="#FFFFFF"
  color="#FFFFFF"
  colorHover="#2B64C0"
  href=""
  plainLink={true}
  to="/"
>
  <h1
    key=".0"
  >
    Test
  </h1>
</Styled(A)>
`;
